
####################################################################################################

# Company       : Huizhou Desay SV Automotive Co., Ltd.

# Division      : Automotive Electronics, Desay Corporation

# Business Unit : Central Technology

# Department    : Advanced Development (Huizhou)

####################################################################################################

# 0. CMake Defs

# 1. Project Name
project(examples)

# 2. Env (Include/Lib Path, C/CXX/LD FLAGS)

# 3. Sub Projects
add_subdirectory(glparkassist-test)

# 5. Project Install
# N/A

